completa header e jumbotron

--- a/css/style.css
+++ b/css/style.css
@@ -16,15 +16,41 @@ body {
 }
 
 .button-small{
-    background-color: blue;
+    background-color: #0061ff;
     color: white;
-    padding: 5px;
+    padding: 8px;
+    text-decoration: none;
 }
+
+.button-large{
+    background-color: #0061ff;
+    color: white;
+    padding: 8px 13px 8px 13px;
+    text-decoration: none;
+}
+
+
 /* --- UTILITIES --- */
 
 /* --- MARGIN --- */
 .m-10 {margin: 10px;} 
 .m-30 {margin: 30px;}
+.m-bott-10 {margin-bottom: 10px;}
+.m-bott-20 {margin-bottom: 20px;}
+.m-bott-30 {margin-bottom: 30px;}
+.m-bott-40 {margin-bottom: 40px;}
+.m-bott-50 {margin-bottom: 50px;}
+.m-bott-60 {margin-bottom: 60px;}
+.m-bott-70 {margin-bottom: 70px;}
+
+.m-top-10 {margin-top: 10px;}
+.m-top-20 {margin-top: 20px;}
+.m-top-30 {margin-top: 30px;}
+.m-top-40 {margin-top: 40px;}
+.m-top-50 {margin-top: 50px;}
+.m-top-60 {margin-top: 60px;}
+.m-top-70 {margin-top: 70px;}
+
 
 
 
@@ -38,6 +64,15 @@ body {
 .pad-bott-50 {padding-bottom: 50px;}
 .pad-bott-60 {padding-bottom: 60px;}
 .pad-bott-70 {padding-bottom: 70px;}
+
+
+.pad-top-30 {padding-top: 30px;}
+.pad-top-40 {padding-top: 40px;}
+.pad-top-50 {padding-top: 50px;}
+.pad-top-60 {padding-top: 60px;}
+.pad-top-70 {padding-top: 70px;}
+
+
 
 
 
@@ -78,8 +113,12 @@ main {
     height: 1000px;
 }
 
+.img-jumbo {
+    max-width: 950px;
+}
+
 .cont-jumbo {
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
 
 }
@@ -93,20 +132,20 @@ main {
 
 .jumbo-bottom {
     display: flex;
-    padding-top: 40px;
+    padding-top: 70px;
 }
 
 .jumbo-left {
     width: 30%;
-    height: 500px;
-    background-color: green;
+    /* height: 500px; */
+
 
 }
 
 .jumbo-right {
     width: 70%;
-    height: 500px;
-    background-color: goldenrod;
+    /* height: 500px; */
+
 }
 
 
@@ -120,13 +159,31 @@ main {
 }
 
 .tariffa-1, .tariffa-2, .tariffa-3 {
-    width: 32%;
+    width: calc(100% / 3);
     height: 600px;
     border: 1px dashed black;
 }
 
 .contact-enterprise {
-    width: 100%;
-    background-color: teal;
-    height: 300px;
+    border: 1px dashed black;
+    height: 400px;
     margin-top: 84px;
+}
+
+.box-partner {
+    display: flex;
+    margin-top: 200px;
+}
+
+.lato-sx {
+    width: 30%;
+    height: 500px;
+    background-color: green;
+
+}
+
+.lato-dx {
+    width: 70%;
+    height: 500px;
+    background-color: goldenrod;
+}
