--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ body {
 
 }
 
+.inline {
+    display: inline-block;
+}
+
 .button-small{
     background-color: #0061ff;
     color: white;
@@ -29,13 +33,29 @@ body {
     text-decoration: none;
 }
 
+.button-gratis {
+    background-color: #0061ff;
+    width: 100%;
+    color: white;
+    padding: 9px;
+    text-align: center;
+    margin: 30px 0px;
+}
+
 a {
-    text-decoration: none;
-    color: black;
+    color: #0061ff;
 }
 
 
 /* --- UTILITIES --- */
+
+
+/* --- COLOR --- */
+.darkgrey{color: darkgray;}
+
+#white {
+    color: white;
+}
 
 /* --- MARGIN --- */
 .m-10 {margin: 10px;} 
@@ -57,7 +77,7 @@ a {
 .m-top-70 {margin-top: 70px;}
 
 /* --- PADDING --- */
-
+.pad-5 {padding: 5px;}
 .pad-10 {padding: 10px;}
 .pad-bott-10 {padding-bottom: 10px;}
 .pad-bott-20 {padding-bottom: 20px;}
@@ -77,6 +97,7 @@ a {
 
 /* --- FONT-SIZE --- */
 .ft-sz10 {font-size: 10px;}
+.ft-sz14 {font-size: 14px;}
 .ft-sz20 {font-size: 20px;}
 .ft-sz30 {font-size: 30px;}
 .ft-sz40 {font-size: 40px;}
@@ -97,6 +118,26 @@ header {
     justify-content: space-between;
     align-items: center;
     position: fixed;
+}
+
+.menu-left {
+    display: flex;
+    align-items: center;
+}
+
+.menu-left > a {
+    text-decoration: none;
+    color: black;
+}
+
+.menu-right > a {
+    text-decoration: none;
+    color: black;
+}
+
+.menu-right {
+    display: flex;
+    align-items: center;
 }
 
 
@@ -157,7 +198,7 @@ main {
 
 .tariffa-1, .tariffa-2, .tariffa-3 {
     width: calc(100% / 3.3);
-    height: 600px;
+    min-height: 600px;
     border: 1px solid darkgray;
 }
 
@@ -172,31 +213,50 @@ main {
     margin: 0 auto;
 }
 
-.testo-tariffa > h3 {
+.testo-tariffa > ul {
+    list-style-type: none;
+}
 
+.testo-tariffa > hr {
+    width: 30%;
 }
 
 
 .contact-enterprise {
-    border: 1px dashed black;
-    height: 400px;
+    border: 1px solid darkgray;
+    min-height: 300px;
     margin-top: 84px;
+}
+
+.testo-button {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.testo-team{
+width: 85%;
+margin: 0 auto;
 }
 
 .box-partner {
     display: flex;
     margin-top: 200px;
+    justify-content: space-between;
 }
 
 .lato-sx {
-    width: 30%;
     height: 500px;
-    background-color: green;
-
 }
 
+.img-partner {
+    width: 100%;
+    height: 100%;
+}
+
+
 .lato-dx {
-    width: 70%;
+    width: 40%;
     height: 500px;
     background-color: goldenrod;
 }
